# ap-stuff

./: .env  .gitignore  .gitmodules  README.md  ap-stuff.code-workspace  justfile  pyproject.toml  pyrightconfig.json  todo.md
ap_bridge/: __init__.py  daemon.py  inspect_manual.py
manual_worlds/: pyproject.toml
manual_worlds/aero_gpx/: archipelago.json
manual_worlds/aero_gpx/lib/: requires.py
manual_worlds/aero_gpx/spec/: __init__.py
manual_worlds/dankagu/: archipelago.json
manual_worlds/dankagu/data/: game.json
manual_worlds/dankagu/spec/: __init__.py
manual_worlds/dankagu/src/spec/: __init__.py  mitama_cards.py
manual_worlds/dankagu_v2/: archipelago.json
manual_worlds/dankagu_v2/data/: game.json
manual_worlds/dankagu_v2/spec/: map.py
manual_worlds/dankagu_v2/src/spec/: __init__.py  map.py  songs.py
manual_worlds/distance/: archipelago.json
manual_worlds/distance/spec/: __init__.py
manual_worlds/golf/: archipelago.json
manual_worlds/golf/data/: game.json
manual_worlds/golf/hooks/: World.py
manual_worlds/golf/spec/: __init__.py
manual_worlds/golf/src/data/: game.json
manual_worlds/golf/src/hooks/: World.py
manual_worlds/golf/src/spec/: __init__.py  world.py
manual_worlds/golf_tc/: archipelago.json
manual_worlds/golf_tc/data/: game.json
manual_worlds/golf_tc/spec/: __init__.py
manual_worlds/kirby_air_riders/: archipelago.json
manual_worlds/kirby_air_riders/data/: game.json
manual_worlds/kirby_air_riders/hooks/: Helpers.py  Rules.py  World.py
manual_worlds/kirby_air_riders/lib/: helpers.py  options.py  requires.py  world.py
manual_worlds/kirby_air_riders/spec/: __init__.py
manual_worlds/potionomics/: archipelago.json
manual_worlds/potionomics/data/: ingredients.csv
manual_worlds/potionomics/spec/: __init__.py
manual_worlds/potionomics/src/data/: game.json  potionomics_ingredients.json
manual_worlds/potionomics/src/spec/: __init__.py
manual_worlds/potionomics_randomized/: archipelago.json
manual_worlds/potionomics_randomized/data/: game.json
manual_worlds/potionomics_randomized/lib/: item.py  requires.py
manual_worlds/potionomics_randomized/spec/: __init__.py
manual_worlds/potionomics_randomized/src/data/: game.json
manual_worlds/potionomics_randomized/src/spec/: __init__.py
manual_worlds/potionomics_v2/: archipelago.json
manual_worlds/potionomics_v2.1/src/data/: game.json
manual_worlds/potionomics_v2.1/src/spec/: __init__.py
manual_worlds/potionomics_v2/data/: game.json
manual_worlds/potionomics_v2/spec/: __init__.py
manual_worlds/potionomics_v2/src/spec/: __init__.py
manual_worlds/potionomics_v3/: archipelago.json
manual_worlds/potionomics_v3/spec/: __init__.py
manual_worlds/potionomics_v3/src/spec/: __init__.py
manual_worlds/rotaeno/: archipelago.json
manual_worlds/rotaeno/data/: game.json
manual_worlds/rotaeno/spec/: __init__.py
manual_worlds/sdvx/: Options.py  archipelago.json  pyproject.toml
manual_worlds/sdvx/data/: converts.json  game.json  songs.json
manual_worlds/sdvx/docs/: guide.md
manual_worlds/sdvx/hooks/: Helpers.py  Options.py  Rules.py  World.py  state.py
manual_worlds/sdvx/lib/: helpers.py  options.py  requires.py  world.py
manual_worlds/sdvx/spec/: __init__.py
manual_worlds/sdvx/src/hooks/: Helpers.py  Options.py  World.py  state.py
manual_worlds/sdvx/src/spec/: __init__.py  songs.py
manual_worlds/sdvx_dev/scripts/: fetch_songs.py
manual_worlds/sdvx_dev/src/data/: game.json
manual_worlds/sdvx_dev/src/hooks/: World.py
manual_worlds/sdvx_dev/src/spec/: __init__.py
manual_worlds/sdvx_v1/src/data/: game.json
manual_worlds/sdvx_v1/src/spec/: __init__.py
manual_worlds/sdvx_v2/data/: game.json
manual_worlds/sdvx_v2/hooks/: Helpers.py  Options.py  State.py  World.py
manual_worlds/sdvx_v2/spec/: __init__.py  types.py
manual_worlds/sdvx_v2/src/data/: game.json
manual_worlds/sdvx_v2/src/spec/: config.py
manual_worlds/spin_rhythm_xd/: archipelago.json
manual_worlds/spin_rhythm_xd/data/: game.json
manual_worlds/spin_rhythm_xd/spec/: __init__.py
manual_worlds/symphony_songlink/: archipelago.json
manual_worlds/symphony_songlink/data/: items.json
manual_worlds/symphony_songlink/src/data/: game.json  items.json
manual_worlds/vns_gardync6/: archipelago.json
manual_worlds/vns_gardync6/spec/: __init__.py
manual_worlds/watch_shows/: archipelago.json
manual_worlds/watch_shows/data/: game.json
manual_worlds/watch_shows/spec/: __init__.py  world.py
(+70 files in other folders)
