[project]
name = "manuals"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []


[tool.pyright]
extraPaths = ["archipelago"]

[dependency-groups]
dev = [
    "bs4>=0.0.2",
    "dataclasses-json>=0.6.7",
    "pip>=25.2",
    "show-in-file-manager>=1.1.5",
]
