[project]
name = "manuals"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bsdiff4>=1.2.2",
    "certifi>=2025.11.12",
    "colorama>=0.4.6",
    "cymem>=2.0.13",
    "cython>=3.2.1",
    "jellyfish>=1.2.1",
    "jinja2>=3.1.6",
    "kivy>=2.3.1",
    "kivymd>=2.0.1.dev0",
    "orjson>=3.11.4",
    "platformdirs>=4.5.0",
    "pyshortcuts>=1.9.6",
    "pyyaml>=6.0.3",
    "schema>=0.7.8",
    "typing-extensions>=4.7,<5",
    "websockets>=13.0.1,<14",
    "cryptography>=46.0.3",
    "pywebview>=6.1",
    "flask>=3.1.1",
    "werkzeug>=3.1.3",
    "pony>=0.7.19 ; python_full_version < '3.13'",
    "pony ; python_full_version >= '3.13'",
    "waitress>=3.0.2",
    "flask-caching>=2.3.0",
    "flask-compress==1.18",
    "flask-limiter>=3.12",
    "bokeh>=3.6.3",
    "markupsafe>=3.0.2",
    "setproctitle>=1.3.5",
    "mistune>=3.1.3",
    "docutils>=0.22.2",
    "maseya-z3pr>=1.0.0rc1",
    "xxtea>=3.0.0",
    "factorio-rcon-py>=2.1.2",
    "pymem>=1.13.0",
    "nest-asyncio>=1.5.5",
    "pyevermizer==0.50.1",
    "dolphin-memory-engine>=1.3.0",
    "zilliandomizer",
    "mpyq>=0.2.5",
    "portpicker>=1.5.2",
    "aiohttp>=3.8.4",
    "loguru>=0.7.0",
    "protobuf==6.31.1",
]

[tool.pyright]
extraPaths = ["archipelago"]

[tool.uv.sources]
kivymd = { git = "https://github.com/kivymd/KivyMD", rev = "5ff9d0d" }
zilliandomizer = { git = "https://github.com/beauxq/zilliandomizer", rev = "96d9a20f8278cee64bb4db859fbd874e0f332d36" }
pony = { git = "https://github.com/black-sliver/pony", rev = "7feb1221953b7fa4a6735466bf21a8b4d35e33ba" }

[dependency-groups]
dev = [
    "bs4>=0.0.2",
    "dataclasses-json>=0.6.7",
    "pip>=25.2",
    "show-in-file-manager>=1.1.5",
]
